sites/hochschule-burgenland/applications/dex/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  annotations:
    external-dns.kubernetes.io/provider: public
    external-dns.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  parentRefs:
    - name: dex-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - auth.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dex
          port: 5556
